<?xml version="1.0"?>
<package format="2">
  <name>haptic_waypoint_replanner</name>
  <version>0.0.0</version>
  <description>The haptic_waypoint_replanner package</description>

  <maintainer email="eaucone@ethz.ch">emanuele</maintainer>

  <license>TODO</license>

  <depend>roscpp</depend> 
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <depend>autopilot</depend>
  <depend>quadrotor_common</depend>
  <depend>quadrotor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>eigen_catkin</depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  <!-- Other tools can request additional information be placed here -->

  </export>
</package>
